--- a/Client/src/components/TaskCard.scss
+++ b/Client/src/components/TaskCard.scss
@@ -5,5 +5,5 @@
   color: $darkest-neutral;
   border: 2px solid rgba($darkest-neutral, 0.5);
   text-decoration: underline;
-  overflow: hidden;
+  // min-height: 100px;
 }
