--- a/Client/src/views/ProjectPage.scss
+++ b/Client/src/views/ProjectPage.scss
@@ -13,6 +13,7 @@
       min-height: 700px;
       align-items: flex-start;
       justify-content: space-between;
+      overflow: hidden;
     }
   }
 }
